[gd_scene load_steps=4 format=3 uid="uid://csgr7vd17feoo"]

[ext_resource type="Script" uid="uid://ifdbvwii0gix" path="res://scripts/menus/info_panel.gd" id="1_umelf"]
[ext_resource type="PackedScene" uid="uid://dqvuj160i4a2v" path="res://scenes/menus/regras.tscn" id="3_2yl5t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlq4f"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.637843, 0.637843, 0.637843, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="InfoPanel" type="CanvasLayer"]
script = ExtResource("1_umelf")
regras_scene = ExtResource("3_2yl5t")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Control" type="Control" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="RegrasButton" type="Button" parent="ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_Menus"
theme_override_font_sizes/font_size = 32
text = "tr(\"RULES\")"

[node name="ReturnButton" type="Button" parent="ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_Menus"
theme_override_font_sizes/font_size = 32
text = "tr(\"INITIAL_PAGE_BUTTON\")"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_top = 72.0
offset_right = 720.0
offset_bottom = 177.0
grow_horizontal = 2
alignment = 1

[node name="Space2" type="Control" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerAtual" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "tr(\"JOGADOR_ATUAL\")"

[node name="Space3" type="Control" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelPlayerAtual" type="Panel" parent="HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 105)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tlq4f")

[node name="Space4" type="Control" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Player1Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Player 1 ([color=green]O[/color]):[/center]"
fit_content = true

[node name="Player1ScoreLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Player2Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Player 2 ([color=red]X[/color]):[/center]"
fit_content = true

[node name="Player2ScoreLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Empate" type="Label" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Empates:"
horizontal_alignment = 1

[node name="EmpateScoreLabel" type="Label" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[connection signal="pressed" from="ColorRect/HBoxContainer/RegrasButton" to="." method="_on_regras_button_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
